update pages [login, singup, profile, edit-profile, change-password]

--- a/src/pages/edit-profile/edit-profile.hbs
+++ b/src/pages/edit-profile/edit-profile.hbs
@@ -15,6 +15,7 @@
                     {{{inputDisplayName}}}
                     {{{inputPhone}}}
                 </div>
+                <div class="content-form__error">{{profileError}}</div>
                 <div class="profile-form__button">
                     {{{button}}}
                 </div>
