--- a/src/pages/profile/profile.pcss
+++ b/src/pages/profile/profile.pcss
@@ -81,7 +81,7 @@
 .profile-form__button {
     display: flex;
     justify-content: center;
-    padding-bottom: 60px;
+    padding: 20px 0 60px;
 }
 
 .profile-form__button .button {
