--- a/src/components/chat-item/chat-item.hbs
+++ b/src/components/chat-item/chat-item.hbs
@@ -2,16 +2,16 @@
     {{{avatar}}}
     <div class="chat-item__info">
         <div class="chat-item__row chat-item__header">
-            <span class="chat-item__name">{{name}}</span>
-            <span class="chat-item__date">{{lastActivity}}</span>
+            <span class="chat-item__name">{{title}}</span>
+            <span class="chat-item__date">{{messageTime}}</span>
         </div>
         <div class="chat-item__row chat-item__footer">
             <div class="chat-item__text">
                 {{#if isMine}}<span class="chat-item__my-message">Вы:</span>{{/if}}
-                {{text}}
+                {{content}}
             </div>
-            {{#if counter}}
-            <div class="chat-item__counter">{{counter}}</div>
+            {{#if unreadCount}}
+            <div class="chat-item__counter">{{unreadCount}}</div>
             {{/if}}
         </div>
     </div>
