create new chat feature

--- a/src/components/modal/modal.hbs
+++ b/src/components/modal/modal.hbs
@@ -5,7 +5,7 @@
             <h1 class="modal-title">
                 {{title}}
             </h1>
-            <form action="" id="modal-form" class="modal-form">
+            <form action="" id="modal-form" class="form modal-form">
             {{#each items}}
                 {{{this}}}
             {{/each}}
