--- a/src/components/modal/modal.pcss
+++ b/src/components/modal/modal.pcss
@@ -34,10 +34,27 @@
 }
 
 .modal-form {
-    padding: 40px 0 0;
+    padding: 20px 0 0;
     min-height: 150px;
-    display: flex;
-    justify-content: space-between;
     align-items: center;
-    flex-direction: column;
 }
+
+.modal-form .input__label {
+    padding: 3px 0;
+}
+
+.modal-form .input__field {
+    width: 100%;
+    border-bottom: 1px solid var(--blue-1);
+    outline: none;
+}
+
+.modal-form .input__error-message {
+    padding: 7px 0 0;
+}
+
+.modal-form .input{
+    width: 100%;
+    /*padding: 12px 0;*/
+}
+
