--- a/src/components/chat-feed/chat-feed.pcss
+++ b/src/components/chat-feed/chat-feed.pcss
@@ -1,5 +1,6 @@
 .chat-feed {
     display: flex;
+    /* height: 100%; */
     flex-direction: column;
     justify-content: flex-end;
     align-items: flex-start;
