add buttonsMenu component

--- a/src/styles/styles.pcss
+++ b/src/styles/styles.pcss
@@ -1,6 +1,7 @@
 @import url('./variables.pcss');
 @import url('../components/input/input.pcss');
 @import url('../components/button/button.pcss');
+@import url('../components/buttonsMenu/buttonsMenu.pcss');
 @import url('../components/chat-item/chat-item.pcss');
 @import url('../components/back-panel/back-panel.pcss');
 @import url('../components/conversation/conversation.pcss');
