--- a/src/components/modal/modal.hbs
+++ b/src/components/modal/modal.hbs
@@ -2,10 +2,13 @@
     {{#if isOpen}}
     <div class="backdrop">
         <div class="modal">
-            <h1 class="modal-title">
+            <div class="modal__close">
+                {{{buttonClose}}}
+            </div>
+            <h1 class="modal__title">
                 {{title}}
             </h1>
-            <form action="" id="modal-form" class="form modal-form">
+            <form action="" id="modal__form" class="form modal__form">
             {{#each items}}
                 {{{this}}}
             {{/each}}
