--- a/src/styles/styles.pcss
+++ b/src/styles/styles.pcss
@@ -32,7 +32,8 @@ body {
 .form {
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
+  /*justify-content: space-between;*/
+  justify-content: flex-end;
 }
 
 .navigation {
