--- a/src/components/message/message.pcss
+++ b/src/components/message/message.pcss
@@ -1,5 +1,6 @@
 .message {
   max-width: 400px;
+  min-width: 100px;
   border: 1px solid var(--grey-4);
   background: var(--grey-4);
   border-radius: 10px;
