--- a/src/components/chat-feed/chat-feed.pcss
+++ b/src/components/chat-feed/chat-feed.pcss
@@ -1,11 +1,12 @@
 .chat-feed {
     display: flex;
-    /* height: 100%; */
-    min-height: 100%;
     flex-direction: column;
-    justify-content: flex-end;
     align-items: flex-start;
     padding-top: 30px;
+    /* height: 100%; */
+    /* min-height: 100%; */
+    /* justify-content: flex-end; */
+
 
     &__date-delimeter {
         display: flex;
