add date delimeter between messages

--- a/src/components/chat-feed/chat-feed.hbs
+++ b/src/components/chat-feed/chat-feed.hbs
@@ -1,6 +1,6 @@
 {{#if messages}}
 <div class="chat-feed">
-    <div class="chat-feed__date-delimeter ">19 июня</div>
+    <!--<div class="chat-feed__date-delimeter ">19 июня</div>-->
     {{#each messages}}
         {{{this}}}
     {{/each}}
