--- a/src/components/chat-feed/chat-feed.pcss
+++ b/src/components/chat-feed/chat-feed.pcss
@@ -2,7 +2,7 @@
     display: flex;
     flex-direction: column;
     align-items: flex-start;
-    padding-top: 30px;
+    /* padding-top: 30px; */
     /* height: 100%; */
     /* min-height: 100%; */
     /* justify-content: flex-end; */
