--- a/src/styles/styles.pcss
+++ b/src/styles/styles.pcss
@@ -7,6 +7,7 @@
 @import url('../components/chat-feed/chat-feed.pcss');
 @import url('../components/chat-item/chat-item.pcss');
 @import url('../components/conversation/conversation.pcss');
+@import url('../components/info-message/info-message.pcss');
 @import url('../components/input/input.pcss');
 @import url('../components/message/message.pcss');
 @import url('../components/modal/modal.pcss');
