--- a/src/styles/styles.pcss
+++ b/src/styles/styles.pcss
@@ -28,6 +28,7 @@ body {
   margin: 0;
   font-family: var(--font-family);
   font-weight: var(--font-weight-regular);
+  overflow: hidden;
 }
 
 .form {
