stylelint test fix

--- a/src/components/buttonsMenu/buttonsMenu.pcss
+++ b/src/components/buttonsMenu/buttonsMenu.pcss
@@ -23,7 +23,7 @@
 .menu-button {
     color: var(--grey-1);
     border: none;
-    padding: 5px 0px 5px 30px;
+    padding: 5px 0 5px 30px;
     font-size: 12px;
     cursor: pointer;
     text-align: left;
