--- a/src/styles/styles.pcss
+++ b/src/styles/styles.pcss
@@ -7,6 +7,7 @@
 @import url('../components/chat-feed/chat-feed.pcss');
 @import url('../components/chat-item/chat-item.pcss');
 @import url('../components/conversation/conversation.pcss');
+@import url('../components/error-page/error-page.pcss');
 @import url('../components/info-message/info-message.pcss');
 @import url('../components/input/input.pcss');
 @import url('../components/message/message.pcss');
@@ -16,7 +17,6 @@
 @import url('../components/users-list/users-list.pcss');
 @import url('./fonts.pcss');
 @import url('../pages/login/login.pcss');
-@import url('../pages/error/error.pcss');
 @import url('../pages/chat/chat.pcss');
 @import url('../pages/profile/profile.pcss');
 
