--- a/src/pages/chat/chat.hbs
+++ b/src/pages/chat/chat.hbs
@@ -3,7 +3,7 @@
         <div class="chats_sidebar-header">
             <div class="chats_sidebar-header-row">
                 {{{buttonCreateChat}}}
-            <a href="../settings" class="profile-link" tabindex="0">
+            <a href="/settings" class="profile-link" tabindex="0">
                 Профиль
                 <div class="profile-link-icon"></div>
             </a>
