stable webpack build v0.1

--- a/src/components/back-panel/back-panel.pcss
+++ b/src/components/back-panel/back-panel.pcss
@@ -23,7 +23,7 @@
     }
 
     &__icon {
-      background: var(--blue-1) url("../../../static/arrow-left.svg") 7px 8px no-repeat;
+      background: var(--blue-1) url("../../static/arrow-left.svg") 7px 8px no-repeat;
       width: 28px;
       height: 28px;
       border-radius:14px;
