--- a/src/components/buttonsMenu/buttonsMenu.pcss
+++ b/src/components/buttonsMenu/buttonsMenu.pcss
@@ -29,15 +29,15 @@
     text-align: left;
 
     &__add-user {
-        background: transparent url("../../../static/icon-add.svg") 0 1px no-repeat;
+        background: transparent url("../../static/icon-add.svg") 0 1px no-repeat;
     }
 
     &__delete-user {
-        background: transparent url("../../../static/icon-delete.svg") 0 1px no-repeat;
+        background: transparent url("../../static/icon-delete.svg") 0 1px no-repeat;
     }
 
     &__leave_chat {
         color: var(--red);
-        background: transparent url("../../../static/icon-leave.svg") 4px 2px no-repeat;
+        background: transparent url("../../static/icon-leave.svg") 4px 2px no-repeat;
     }
 }
