--- a/src/components/message/message.pcss
+++ b/src/components/message/message.pcss
@@ -50,13 +50,13 @@
         cursor: pointer;
         width: 28px;
         height: 28px;
-        background: var(--blue-1) url("../../../static/arrow-down.svg") 8px 8px no-repeat;
+        background: var(--blue-1) url("../../static/arrow-down.svg") 8px 8px no-repeat;
         border: none;
         border-radius: 50%;
         box-sizing: border-box;
 
         &:hover {
-          background: var(--blue-1)  url("../../../static/arrow-down.svg") 8px 8px no-repeat;
+          background: var(--blue-1)  url("../../static/arrow-down.svg") 8px 8px no-repeat;
         }
   }
 
@@ -101,11 +101,11 @@
     margin-right: 2px;
 
     &-readed {
-      background: url("../../../static/status-readed.svg") 0 4px no-repeat;
+      background: url("../../static/status-readed.svg") 0 4px no-repeat;
     }
 
     &-sended {
-      background: url("../../../static/status-sended.svg") 0 4px no-repeat;
+      background: url("../../static/status-sended.svg") 0 4px no-repeat;
     }
   }
 }
