--- a/src/components/modal/modal.pcss
+++ b/src/components/modal/modal.pcss
@@ -42,14 +42,14 @@
     }
 
     &__close-button {
-        background: url("../../../static/icon-close.svg") 2px 2px no-repeat;
+        background: url("../../static/icon-close.svg") 2px 2px no-repeat;
         width: 20px;
         height: 20px;
         border: none;
         box-sizing: border-box;
 
         &:hover {
-            background: url("../../../static/icon-close-hover.svg") 2px 2px no-repeat;
+            background: url("../../static/icon-close-hover.svg") 2px 2px no-repeat;
         }
     }
 }
