--- a/src/components/send-message-form/send-message-form.pcss
+++ b/src/components/send-message-form/send-message-form.pcss
@@ -8,17 +8,17 @@
     &__attach-button {
         width: 32px;
         height: 32px;
-        background: url("../../../static/attach.svg") 0 0 no-repeat;
+        background: url("../../static/attach.svg") 0 0 no-repeat;
         border: none;
         box-sizing: border-box;
 
         &:hover {
-            background: url("../../../static/attach-hover.svg") 0 0 no-repeat;
+            background: url("../../static/attach-hover.svg") 0 0 no-repeat;
         }
     }
 
     &__send-button {
-        background: var(--blue-1) url("../../../static/arrow-1.svg") 8px 8px no-repeat;
+        background: var(--blue-1) url("../../static/arrow-1.svg") 8px 8px no-repeat;
         width: 28px;
         height: 28px;
         border-radius:14px;
