--- a/src/components/user-item/user-item.pcss
+++ b/src/components/user-item/user-item.pcss
@@ -12,6 +12,6 @@
     }
 
     &-selected {
-        background: var(--blue-2) url("../../../static/checked.svg") 250px 13px no-repeat;
+        background: var(--blue-2) url("../../static/checked.svg") 250px 13px no-repeat;
     }
 }
