--- a/src/pages/chat/chat.pcss
+++ b/src/pages/chat/chat.pcss
@@ -26,7 +26,7 @@
 }
 
 .chats_create-button {
-    background: transparent url("../../../static/plus.svg") 0 7px no-repeat;
+    background: transparent url("../../static/plus.svg") 0 7px no-repeat;
     color: var(--grey-2);
     border: none;
     padding: 5px 10px 5px 15px;
@@ -44,7 +44,7 @@
 .profile-link-icon {
     height: 15px;
     width: 14px;
-    background: url("../../../static/arrow-2.svg") 8px 3px no-repeat;
+    background: url("../../static/arrow-2.svg") 8px 3px no-repeat;
 }
 
 .chats_sidebar-search {
@@ -59,7 +59,7 @@
 .search-input{
     display: block;
     width: 100%;
-    background: transparent url("../../../static/magnifier.svg") no-repeat;
+    background: transparent url("../../static/magnifier.svg") no-repeat;
     border: none;
     font-size: 12px;
     outline: none;
