--- a/src/components/avatar-editable/avatar-editable.pcss
+++ b/src/components/avatar-editable/avatar-editable.pcss
@@ -11,7 +11,7 @@
 .avatar-l {
     width: 130px;
     height: 130px;
-    background: var(--grey-4) url("../../../static/default-avatar-f.svg") 45px 45px no-repeat;
+    background: var(--grey-4) url("../../static/default-avatar-f.svg") 45px 45px no-repeat;
 }
 
 .change-image-msg {
